--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "postcss": "^8.4.19",
     "pre-commit": "^1.2.2",
-    "prettier": "^2.8.0"
+    "prettier": "^2.8.0",
+    "tailwindcss": "^3.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
